<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose1"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/compose_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rakesh.appshortcuts"
            android:targetClass="com.rakesh.appshortcuts.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="compose2"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:shortcutShortLabel="@string/compose_shortcut_short_label2"
        android:shortcutLongLabel="@string/compose_shortcut_long_label2"
        android:shortcutDisabledMessage="@string/compose_disabled_message2">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rakesh.appshortcuts"
            android:targetClass="com.rakesh.appshortcuts.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="compose3"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:shortcutShortLabel="@string/compose_shortcut_short_label3"
        android:shortcutLongLabel="@string/compose_shortcut_long_label3"
        android:shortcutDisabledMessage="@string/compose_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rakesh.appshortcuts"
            android:targetClass="com.rakesh.appshortcuts.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="compose4"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:shortcutShortLabel="@string/compose_shortcut_short_label4"
        android:shortcutLongLabel="@string/compose_shortcut_long_label4"
        android:shortcutDisabledMessage="@string/compose_disabled_message4">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rakesh.appshortcuts"
            android:targetClass="com.rakesh.appshortcuts.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>